ipc/ipdl/test/ipdl/ok/syncProtocol.ipdl
sync protocol syncProtocol {

    // sanity check of sync protocols

child:
    async AsyncMsg();

parent:
    sync SyncMsg() returns (int i);

};
