ipc/ipdl/test/ipdl/error/undeclReturnType.ipdl
//error: argument typename `FARGLEGARGLE' of message `Msg' has not been declared

sync protocol undeclReturnType {

child:  sync Msg() returns (FARGLEGARGLE r);

};
